# golf

./: .gitignore  LICENSE  Makefile  README.md  ai_solver.py  arcdsl.txt  bench.py  checked_cache.json  checker.py  cmp_test.py  code_golf_utils.py  compress.py  deflate_optimizer.py  exec_time.txt  gather_notebooks.py  generator.py  genetic_algo.py  get_compression_candidates.py  hoge.py  init.sh  notebooks_check_cache.json  public_data.py  pyminify.sh  pyproject.toml  release_note.md  setup.sh  solver.py  strip.py  task_viz.py  test.py  utils.py  viz.py
.cache/: checked_cache.json  notebooks_check_cache.json
_base_arcdsl/: task001.py  task002.py  task003.py  task004.py  task005.py  task006.py  task007.py  task008.py  task009.py  task010.py  task011.py  task012.py  task013.py  task014.py  task015.py  task016.py  task017.py  task018.py  task019.py  task020.py  task021.py  task022.py  task023.py  task024.py  task025.py  task026.py  task027.py  task028.py  task029.py  task030.py  task031.py  task032.py  task033.py  task034.py  task035.py  task036.py  task037.py  task038.py  task039.py  task040.py  (+352 more)
_junkyard/: add.py  ai_solver.py  anneal.py  gen_score.py  leak_rand.py  linebreak_remover.py  minifier_cases.py  optimizer_demo.py  scrape_notebooks.py  xorhash.py
_scripts/: _convert_arcdsl.py  codecs.py  minifier_cases.py  mphf.py  scrape_notebooks.py
arc_dsl/: const.py  convert.py  dsl.py
base_arcdsl/: task001.py  task002.py  task003.py  task004.py  task005.py  task006.py  task007.py  task008.py  task009.py  task009.py~retire  task010.py  task010.py~retire  task011.py  (+482 more)
(+10588 files in other folders)
